src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>printsf__PrintSF_Last_Address_Fail_Date__c</fullName>
        <description>The last date a User ran a PrintSF Mail List and clicked to post address failures which included this Contact</description>
        <inlineHelpText>The last date a User ran a PrintSF Mail List and clicked to post address failures which included this Contact</inlineHelpText>
        <label>PrintSF Last Address Fail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Address_Fail_Error__c</fullName>
        <description>The USPS address failure error returned via last PrintSF address validation attempt against USPS systems</description>
        <inlineHelpText>The USPS address failure error returned via last PrintSF address validation attempt against USPS systems</inlineHelpText>
        <label>PrintSF Last Address Fail Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Mailer_Status_Date__c</fullName>
        <description>Date of the last status update to the most recent Mailer History related to this Contact</description>
        <inlineHelpText>Date of the last status update to the most recent Mailer History related to this Contact</inlineHelpText>
        <label>PrintSF Last Mailer Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Mailer_Status__c</fullName>
        <description>The last delivery status updated from the most recent Mailer History related to this Contact. Values may include Cancelled, Pending, Delivered, Returned and Not Tracked</description>
        <inlineHelpText>The last delivery status updated from the most recent Mailer History related to this Contact. Values may include Cancelled, Pending, Delivered, Returned and Not Tracked</inlineHelpText>
        <label>PrintSF Last Mailer Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Move_Forward_Date__c</fullName>
        <description>The last date a Mailer History related to this Contact had a NCOA Result of Forwarded</description>
        <inlineHelpText>The last date a Mailer History related to this Contact had a NCOA Result of Forwarded</inlineHelpText>
        <label>PrintSF Last Move Forward Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Return_Mail_Date__c</fullName>
        <description>The last date a Mailer History related to this Contact had a delivery status updated as Returned</description>
        <inlineHelpText>The last date a Mailer History related to this Contact had a delivery status updated as Returned</inlineHelpText>
        <label>PrintSF Last Return Mail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Template_ID__c</fullName>
        <description>The PrintSF Template ID (a number) from the most recent Mailer History related to this Contact.  Typically used to trigger follow on Salesforce workflows or emails, or next steps in Marketing Automation platforms.</description>
        <inlineHelpText>The PrintSF Template ID (a number) from the most recent Mailer History related to this Contact.  Typically used to trigger follow on Salesforce workflows or emails, or next steps in Marketing Automation platforms.</inlineHelpText>
        <label>PrintSF Last Template ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Template_Name__c</fullName>
        <description>The PrintSF Template Name from the most recent Mailer History related to this Contact.</description>
        <inlineHelpText>The PrintSF Template Name from the most recent Mailer History related to this Contact.</inlineHelpText>
        <label>PrintSF Last Template Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>